--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
