--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "classnames": "^2.3.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
